--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,8 @@
     --green: #00875F;
     --green-dark: #015F43;
     --green-light: #00B37E;
+
+    --min: 998px;
 }
 
 * {
@@ -56,27 +58,38 @@ h1, h2, h3, h4, h5, h6, strong {
 
 button {
     cursor: pointer;
-    padding: 0.75rem 1.25rem;
+    padding: 1rem 1.25rem;
     border: 0;
     border-radius: 0.25rem;
     font-size: 1rem;
     font-weight: 700;
     line-height: 160%;
+    transition: filter ease-out 0.2s;
+}
+
+button:hover {
+    filter: brightness(0.9);
 }
 
 input {
     border: 0;
     border-radius: 0.25rem;
-    padding: 1rem;
+    padding: 1rem 1.25rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 160%;
     background-color: var(--gray900);
+    color: var(--gray200);
     width: 100%;
 }
 
 .green {
     background-color: var(--green);
+    color: #fff;
+}
+
+.red {
+    background-color: var(--red);
     color: #fff;
 }
 
