--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 :root {
     font-synthesis: none;
@@ -25,9 +25,10 @@
     --min: 998px;
 }
 
-* {
+*, ::after, ::before {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -71,6 +72,11 @@ button:hover {
     filter: brightness(0.9);
 }
 
+button:disabled {
+    filter: grayscale(1);
+    cursor: not-allowed;
+}
+
 input {
     border: 0;
     border-radius: 0.25rem;
@@ -81,6 +87,20 @@ input {
     background-color: var(--gray900);
     color: var(--gray200);
     width: 100%;
+}
+
+input.error {
+    border: 2px solid var(--red);
+}
+
+input[type=number] {
+    appearance: textfield;
+}
+
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+    appearance: none;
+    margin: 0;
 }
 
 .green {
@@ -96,4 +116,249 @@ input {
 .secondary {
     background-color: var(--gray600);
     color: #fff;
+}
+
+ 
+.skeleton { 
+    background-image: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(201,201,201,0.15) 49%, rgba(255,255,255,0) 100%);  
+    background-size: 300px 100%;  
+    background-repeat: no-repeat;  
+    background-position: left -40px top 0;  
+    -webkit-animation: shine 2s ease-in-out infinite;  
+    animation: shine 2s ease infinite;  
+ }
+
+ @-webkit-keyframes shine {  
+    to {  
+        background-position: right -300px top 0;  
+    }  
+ }
+
+ @keyframes shine {  
+    to {  
+        background-position: right  -300px top 0;  
+    }  
+ }
+
+/* criar um classe container onde seu padding diminue fluidamente até 2rem conforme diminue a largura */
+.container {
+    padding: 0 20rem;
+    min-width: 820px;
+}
+
+@media (max-width: 1820px) {
+    .container {
+        padding: 0 19.5rem;
+    }
+}
+
+@media (max-width: 1800px) {
+    .container {
+        padding: 0 19rem;
+    }
+}
+
+@media (max-width: 1780px) {
+    .container {
+        padding: 0 18.5rem;
+    }
+}
+
+@media (max-width: 1760px) {
+    .container {
+        padding: 0 18rem;
+    }
+}
+
+@media (max-width: 1740px) {
+    .container {
+        padding: 0 17.5rem;
+    }
+}
+
+
+@media (max-width: 1720px) {
+    .container {
+        padding: 0 17rem;
+    }
+}
+
+@media (max-width: 1700px) {
+    .container {
+        padding: 0 16.5rem;
+    }
+}
+
+@media (max-width: 1680px) {
+    .container {
+        padding: 0 16rem;
+    }
+}
+
+@media (max-width: 1660px) {
+    .container {
+        padding: 0 15.5rem;
+    }
+}
+
+@media (max-width: 1640px) {
+    .container {
+        padding: 0 15rem;
+    }
+}
+
+@media (max-width: 1620px) {
+    .container {
+        padding: 0 14.5rem;
+    }
+}
+
+@media (max-width: 1600px) {
+    .container {
+        padding: 0 14rem;
+    }
+}
+
+@media (max-width: 1580px) {
+    .container {
+        padding: 0 13.5rem;
+    }
+}
+
+@media (max-width: 1560px) {
+    .container {
+        padding: 0 13rem;
+    }
+}
+
+@media (max-width: 1540px) {
+    .container {
+        padding: 0 12.5rem;
+    }
+}
+
+@media (max-width: 1520px) {
+    .container {
+        padding: 0 12rem;
+    }
+}
+
+@media (max-width: 1500px) {
+    .container {
+        padding: 0 11.5rem;
+    }
+}
+
+@media (max-width: 1480px) {
+    .container {
+        padding: 0 11rem;
+    }
+}
+
+@media (max-width: 1460px) {
+    .container {
+        padding: 0 10.5rem;
+    }
+}
+
+@media (max-width: 1440px) {
+    .container {
+        padding: 0 10rem;
+    }
+}
+
+@media (max-width: 1420px) {
+    .container {
+        padding: 0 9.5rem;
+    }
+}
+
+@media (max-width: 1400px) {
+    .container {
+        padding: 0 9rem;
+    }
+}
+
+@media (max-width: 1380px) {
+    .container {
+        padding: 0 8.5rem;
+    }
+}
+
+@media (max-width: 1360px) {
+    .container {
+        padding: 0 8rem;
+    }
+}
+
+@media (max-width: 1340px) {
+    .container {
+        padding: 0 7.5rem;
+    }
+}
+
+@media (max-width: 1320px) {
+    .container {
+        padding: 0 7rem;
+    }
+}
+
+@media (max-width: 1300px) {
+    .container {
+        padding: 0 6.5rem;
+    }
+}
+
+@media (max-width: 1280px) {
+    .container {
+        padding: 0 6rem;
+    }
+}
+
+@media (max-width: 1260px) {
+    .container {
+        padding: 0 5.5rem;
+    }
+}
+
+@media (max-width: 1240px) {
+    .container {
+        padding: 0 5rem;
+    }
+}
+
+@media (max-width: 1220px) {
+    .container {
+        padding: 0 4.5rem;
+    }
+}
+
+@media (max-width: 1200px) {
+    .container {
+        padding: 0 4rem;
+    }
+}
+
+@media (max-width: 1180px) {
+    .container {
+        padding: 0 3.5rem;
+    }
+}
+
+@media (max-width: 1160px) {
+    .container {
+        padding: 0 3rem;
+    }
+}
+
+@media (max-width: 1140px) {
+    .container {
+        padding: 0 2.5rem;
+    }
+}
+
+@media (max-width: 1120px) {
+    .container {
+        padding: 0 2rem;
+    }
 }
