--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,21 +11,23 @@
     --gray800: #202024;
     --gray700: #29292e;
     --gray600: #323238;
-    --gray300: #7C7C8A;
-    --gray200: #C4C4CC;
-    --gray100: #E1E1E6;
+    --gray300: #7c7c8a;
+    --gray200: #c4c4cc;
+    --gray100: #e1e1e6;
 
-    --red: #F75A68;
-    --red-dark: #AA2834;
+    --red: #f75a68;
+    --red-dark: #aa2834;
 
-    --green: #00875F;
-    --green-dark: #015F43;
-    --green-light: #00B37E;
+    --green: #00875f;
+    --green-dark: #015f43;
+    --green-light: #00b37e;
 
     --min: 998px;
 }
 
-*, ::after, ::before {
+*,
+::after,
+::before {
     margin: 0;
     padding: 0;
     -webkit-box-sizing: border-box;
@@ -47,12 +49,21 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, button {
+body,
+input,
+textarea,
+button {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
 }
 
-h1, h2, h3, h4, h5, h6, strong {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
     font-weight: 600;
     line-height: 160%;
 }
@@ -93,7 +104,7 @@ input.error {
     border: 2px solid var(--red);
 }
 
-input[type=number] {
+input[type='number'] {
     appearance: textfield;
 }
 
@@ -118,27 +129,31 @@ input::-webkit-outer-spin-button {
     color: #fff;
 }
 
- 
-.skeleton { 
-    background-image: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(201,201,201,0.15) 49%, rgba(255,255,255,0) 100%);  
-    background-size: 300px 100%;  
-    background-repeat: no-repeat;  
-    background-position: left -40px top 0;  
-    -webkit-animation: shine 2s ease-in-out infinite;  
-    animation: shine 2s ease infinite;  
- }
+.skeleton {
+    background-image: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(201, 201, 201, 0.15) 49%,
+        rgba(255, 255, 255, 0) 100%
+    );
+    background-size: 300px 100%;
+    background-repeat: no-repeat;
+    background-position: left -40px top 0;
+    -webkit-animation: shine 2s ease-in-out infinite;
+    animation: shine 2s ease infinite;
+}
 
- @-webkit-keyframes shine {  
-    to {  
-        background-position: right -300px top 0;  
-    }  
- }
+@-webkit-keyframes shine {
+    to {
+        background-position: right -300px top 0;
+    }
+}
 
- @keyframes shine {  
-    to {  
-        background-position: right  -300px top 0;  
-    }  
- }
+@keyframes shine {
+    to {
+        background-position: right -300px top 0;
+    }
+}
 
 /* criar um classe container onde seu padding diminue fluidamente até 2rem conforme diminue a largura */
 .container {
@@ -175,7 +190,6 @@ input::-webkit-outer-spin-button {
         padding: 0 17.5rem;
     }
 }
-
 
 @media (max-width: 1720px) {
     .container {
